fix(report): align table headings & columns left & right

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -906,19 +906,25 @@ summary.lh-passed-audits-summary {
   padding: 8px 6px;
 }
 
+
 .lh-table-column--text,
+.lh-table-column--url,
+.lh-table-column--node {
+  text-align: left;
+}
+
 .lh-table-column--bytes,
 .lh-table-column--timespanMs,
 .lh-table-column--ms {
   text-align: right;
 }
 
+
 .lh-table-column--thumbnail {
   width: calc(var(--image-preview-size) * 2);
 }
 
 .lh-table-column--url {
-  text-align: left;
   min-width: 250px;
   white-space: nowrap;
   max-width: 0;
